kubernetes/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: passtlsclientcert
spec:
  passTLSClientCert:
    pem: true
